--- a/microapp/src/main/resources/application.properties
+++ b/microapp/src/main/resources/application.properties
@@ -4,3 +4,8 @@ server.port=8088
 spring.application.name=microapp
 #注册中心地址
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
+spring.thymeleaf.mode=LEGACYHTML5
