--- a/microimage/src/main/resources/application.properties
+++ b/microimage/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 config.image.path=/Users/deng/IdeaProjects/site/microimage/images
+config.code=1.12
