--- a/microapp/src/main/resources/application.properties
+++ b/microapp/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
 spring.thymeleaf.mode=LEGACYHTML5
+
+gateway.url=http://127.0.0.1:5555
